--- a/Diseño.css
+++ b/Diseño.css
@@ -2,16 +2,13 @@
 	background: white;
 }
 
-
 body {
-	padding-top: 100px;
+	padding-top: 30px;
 }
-
 
 .barra{
 	background: orange;
-	position: absolute;
-	top: 24px;
+	top: 0px;
 	width: 99.1vw;
 	height: 5px;
 }
@@ -20,8 +17,8 @@ body {
 
 .barra2{
 	background: orange;
-	position: absolute;
-	top: 85px;
+	position: relative;
+	top: 30px;
 	width: 99.1vw;
 	height: 5px;
 }
@@ -55,12 +52,11 @@ h11{
 }
 
 .contenedorimagen__1 {
-	position: absolute;
+	position: relative;
 	height: 130px;
 	width: 130px ;
-	left: 880px;
-	top: 10px;
-	bottom: 200px;
+	left: 48%;
+	top: -123px;
 	border-radius: 20px;
 }
 
@@ -90,15 +86,12 @@ h11{
 	top: 80px;
 }
 
+
 .contenedorimagen__2 {
 	position: absolute;
-	height: 500px;
-	width: 550px ;
-	left: 685px;
-	top: 520px;
-	border-radius: 20px;
+	left: 38%;
+	top: 673px;
 }
-
 
 .contenedortexto__h3 {
 	font-size: 48px;
@@ -117,10 +110,9 @@ h11{
 
 
 .contenedorimagen__3 {
-	position: absolute;
+	position: relative;
 	height: 500px;
 	width: 550px ;
-	left: 685px;
 	top: 1250px;
 	border-radius: 20px;
 }
@@ -178,11 +170,6 @@ h11{
 	border-radius: 20px;
 }
 
-.contact_form__h1 {
-	background: orange;
-	position: sticky;
-	top: 0px;
-	margin-top: 100px;
-}
+
 
 
